--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Children Food</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="style.css">
+    <title>Children Food Landing Page</title>
 </head>
 <body>
-    
+    <!-- Let's wrap enerythin up in a container! -->
+    <div class="container">
+        <div class="split left">
+          <h1>Milkshake</h1>
+          <a href="#" class="btn">Buy Now</a>
+          <!-- We'll update this button later to connect to part II of the project -->
+        </div>
+        <div class="split right">
+          <h1>Pizza</h1>
+          <a href="#" class="btn">Buy Now</a>
+          <!-- We'll update this button later to connect to part II of the project -->
+        </div>
+      </div>
+  
+      <script src="script.js"></script>
 </body>
 </html>
