--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <div class="container">
         <div class="split left">
           <h1>Milkshake</h1>
-          <a href="#" class="btn">Buy Now</a>
+          <a href="Milkshake/milkshake.html" class="btn">Buy Now</a>
           <!-- We'll update this button later to connect to part II of the project -->
         </div>
         <div class="split right">
           <h1>Pizza</h1>
-          <a href="#" class="btn">Buy Now</a>
+          <a href="/Pizza/Pizza.html" class="btn">Buy Now</a>
           <!-- We'll update this button later to connect to part II of the project -->
         </div>
       </div>
-  
+      
       <script src="script.js"></script>
 </body>
 </html>
