--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <!-- Let's wrap enerythin up in a container! -->
     <div class="container">
         <div class="split left">
-          <h1>Milkshake</h1>
+          <h1 class="shake_title">Milkshake</h1>
           <a href="Milkshake/milkshake.html" class="btn">Buy Now</a>
           <!-- We'll update this button later to connect to part II of the project -->
         </div>
         <div class="split right">
-          <h1>Pizza</h1>
+          <h1 class="pizza_title">Pizza</h1>
           <a href="/Pizza/Pizza.html" class="btn">Buy Now</a>
           <!-- We'll update this button later to connect to part II of the project -->
         </div>
